--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ header{
 	z-index:99999;
 }
 header.sticky{
-	background-color: #78cfcf;
+	background-color: #FF1493;
 	-webkit-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.41);
 	-moz-box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
 	box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
@@ -449,12 +449,12 @@ footer .styled-select {
 
 /* Menu 2 */
 .main-menu-2 ul{
-	list-style:none;
-	margin:0 0 17px 0;
+
+	margin:0 0 18px 0;
 	padding:0;
 	float:right;
-	 font-size:14px; 
-	 font-weight:500;
+	font-size:18px; 
+	font-weight:550;
 }
 .main-menu-2 ul li{
 	display:inline-block;
