--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ h3 .slide_typo strong {font-family:"Helvetica Neue", Helvetica, Arial, sans-seri
 .main_title h2{ font-size:46px; letter-spacing:-1px; font-weight:300; margin-bottom:0;}
 .main_title p{ font-size:18px; color:#555; line-height:1.2; margin-bottom:30px; font-weight:300;}
 
+
+
 .feature h3{margin-top:0;}
 .feature h3 span{color:#ec008c;}
 
@@ -524,6 +526,7 @@ footer .styled-select {
 	display:inline-block;
 	text-align:center;
 	margin:0 10px;
+	color:red;
 	padding-left:20px;
 	background:url(../img/dots_vert.png) center left no-repeat;
 }
@@ -1975,6 +1978,10 @@ blockquote.styled {
 .white_bg{
 	background-color:#fff;
 }
+.lightBlue_bg{
+	background-color:#87CEFA;
+}
+
 
 /*============================================================================================*/
 /* 4.  UPDATES */
@@ -2685,3 +2692,4 @@ ul.plan-features {
 .plan-tall + .plan {
 	border-left: 0;
 }
+
