--- a/css/style.css
+++ b/css/style.css
@@ -299,20 +299,25 @@ header{
 	padding-top:15px;
 	top:0;
 	left:0;
-	z-index:99999;
-}
-header.sticky{
-	background-color: #FF1493;
+	z-index:88888;
+	background-color: #252222;
 	-webkit-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.41);
 	-moz-box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
 	box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
 }
+header.sticky{
+	background-color: #252222;
+	-webkit-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.41);
+	-moz-box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
+	box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
+
+}
 #subheader{
 	color:#fff;
 	text-align:center;
-	  display: table;
-   width:100%;
-   height:470px;
+	display: table;
+   	width:100%;
+  	height:470px;
    background: rgba(0,0,0,.7);
 }
 #home #subheader{
@@ -1319,6 +1324,7 @@ ul.opening_list li span{
 	width:100%;
 	height:100%;
 	bottom:0;
+	display: none;
 	background-color:#78cfcf; 
 	z-index:999999; 
 }
@@ -2780,12 +2786,12 @@ ul.plan-features {
 .post-slide13 .author > a:hover{
     color:#dc005a;
 }
-.post-slide13 .post-description{
-    color:#8f8f8f;
-    font-size: 14px;
-    line-height: 24px;
-    padding-top: 5px;
-}
+/*.post-slide13 .post-description{
+    /*color:#8f8f8f;*/
+    /*font-size: 14px;*/
+    /*line-height: 24px;*/
+    /*padding-top: 5px;*/
+}*/
 .post-slide13 .post-description:before{
     content: "";
     display: block;
@@ -2804,13 +2810,12 @@ ul.plan-features {
     background: #dc005a;
     opacity: 1;
 }
-.privacy h2{
-	text-align: center;
-}
-.list_item {
-	list-style-type: disc;
-	
-}
+/*.privacy h2{
+	text-align: left;
+}*/
+
+
+
 
 
 #ts-footer .ts-box {
@@ -2829,9 +2834,7 @@ ul.plan-features {
     animation-name: ts-fadeInUp;
 }
 
-#contacts{
 
-}
 
 
 
