changes in privacy polisy

--- a/css/menu.css
+++ b/css/menu.css
@@ -12,7 +12,7 @@
 .main-menu ul li a {display: block;padding:10px;}
 			
 /*First level styles */			
-.main-menu > ul > li > a {color: #fff; padding: 1px; font-size:14px; font-family: allerbold; margin:10px;text-transform: uppercase; font-weight:500; text-align: center;}
+.main-menu > ul > li > a {color: #fff; padding: 1px; font-size:14px; font-family: allerregular; margin:10px;text-transform: uppercase; font-weight:500; text-align: center;}
 
 /* Opacity mask when left open */
 .layer {display: none; position: fixed; top: 0; left: 0; width: 100%; min-width: 100%; z-index: 100; min-height: 100%; background-color: #000; opacity: 0; z-index:999;}
